--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -6,7 +6,7 @@
     <title>DK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Fabiano Almeida">
 
     <!-- Le styles -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
@@ -92,11 +92,11 @@
     {% endblock content %}
 
     {% block footer %}
-    <div class="container">
+<!--     <div class="container">
       <footer>
-        <p>&copy; Company 2016.                                                                                                                            </p>
+        <p>&copy; Company 2016.</p>
       </footer>
-    </div>
+    </div> -->
     {% endblock footer %}
 
     <!-- Le javascript
