--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -13,18 +13,36 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+           <h5>Calendário de aulas <i class="icon-calendar"></i></h5>
+          <p>Gestão do calendário on line, acesso de qualquer lugar</p>
+            <ul>
+              <li>Datas das provas por sala de aula</li>
+              <li>Datas dos compromissos financeiros dos Responsáveis dos alunos</li>
+              <li>Envios de alertas para os responsáveis</li>
+            </ul>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h5>Agenda do Aluno <i class="icon-book"></i></h5>
+          <p>Comunicação rápida, direta, multiusuário </p>
+          <ul>
+              <li>Mensagem simultânea para todos os alunos</li>
+              <li>Mensagem para grupos de alunos</li>
+              <li>Mensagem simultânea para todos responsáveis de alunos</li>
+              <li>Mensagem para grupos de responsáveis por alunos</li>
+            </ul>
           <p><a class="btn" href="#">View details &raquo;</a></p>
        </div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <h5>Arquivos <i class="icon-file"></i></h5>
+          <p>Acesso aos dados de onde você estiver</p>
+          <ul>
+              <li>Exercícios</li>
+              <li>Cadastro de alunos</li>
+              <li>Notas</li>
+              <li>Faltas</li>
+              <li>Atividades</li>
+            </ul>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div>
       </div>
