--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -87,7 +87,11 @@
         </div>
       </div>
     </div>
-
+    <div class="span1{% if subsections %}0{% else %}2{% endif %}">
+        <h2>
+            {% block page_title %}
+            {% endblock page_title %}
+        </h2>
     {% block content %}
     {% endblock content %}
 
@@ -102,20 +106,10 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{% static 'js/jquery.js' %}"></script>
-    <script src="{% static 'js/bootstrap-transition.js' %}"></script>
-    <script src="{% static 'js/bootstrap-alert.js' %}"></script>
-    <script src="{% static 'js/bootstrap-modal.js' %}"></script>
-    <script src="{% static 'js/bootstrap-dropdown.js' %}"></script>
-    <script src="{% static 'js/bootstrap-scrollspy.js' %}"></script>
-    <script src="{% static 'js/bootstrap-tab.js' %}"></script>
-    <script src="{% static 'js/bootstrap-tooltip.js' %}"></script>
-    <script src="{% static 'js/bootstrap-popover.js' %}"></script>
-    <script src="{% static 'js/bootstrap-button.js' %}"></script>
+    <script src="assets/jquery.js" type="text/javascript"></script>
+
     <script src="{% static 'js/bootstrap-collapse.js' %}"></script>
-    <script src="{% static 'js/bootstrap-carousel.js' %}"></script>
-    <script src="{% static 'js/bootstrap-typeahead.js' %}"></script>
+
     {% block extra_js %} {% endblock extra_js%}
     </body>
 </html>
