--- a/escolar/core/templates/base_adm.html
+++ b/escolar/core/templates/base_adm.html
@@ -1,7 +1,10 @@
 <ul class="nav nav-tabs">
     <li><a href="{% url 'escolas_list' %}" id='escola' data-toggle="tab">Escola</a></li>
-    <li><a href="#" id='escola' data-toggle="tab">Grupos</a></li>
+    <li><a href="{% url 'grupos_list' %}" id='escola' data-toggle="tab">Grupos</a></li>
     <li><a href="#classes" data-toggle="tab">Classes</a></li>
-    <li><a href="#professores" data-toggle="tab">Professores</a></li>
-    <li><a href="#alunos" data-toggle="tab">Alunos</a></li>
+    <li><a href="{% url 'professores_list' %}" data-toggle="tab">Professores</a></li>
+    <li><a href="{% url 'alunos_list' %}" data-toggle="tab">Alunos</a></li>
+    <li><a href="{% url 'alunos_list' %}" data-toggle="tab">Responsáveis</a></li>
 </ul>
+
+./manage.py dumpdata core.user --indent 4
