--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -107,10 +107,11 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/jquery.js" type="text/javascript"></script>
-
-    <script src="{% static 'js/bootstrap-collapse.js' %}"></script>
-
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="{% static 'js/jquery.formset.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <!-- place project specific Javascript in this file -->
+        <script src="{% static 'js/project.js' %}"></script>
     {% block extra_js %} {% endblock extra_js%}
     </body>
 </html>
